Update GetOSM Add serviceEndpoints.json

--- a/TwinLand/TwinLand.csproj
+++ b/TwinLand/TwinLand.csproj
@@ -54,6 +54,9 @@
       <None Update="Resouces\T_icon.png">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\TwinLandServiceEndpoints.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
     
 </Project>
