--- a/TwinLand/TwinLand.csproj
+++ b/TwinLand/TwinLand.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="GDAL.Plugins" Version="2.4.4" />
         <PackageReference Include="Grasshopper" Version="6.32.20340.21001" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="OsmSharp" Version="6.2.0" />
         <PackageReference Include="RhinoCommon" Version="6.32.20340.21001" />
         <PackageReference Include="System.Resources.Extensions" Version="8.0.0-preview.7.23375.6" />
         <PackageReference Include="System.ValueTuple" Version="4.5.0" />
@@ -40,6 +41,10 @@
         <Generator>ResXFileCodeGenerator</Generator>
           <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       </EmbeddedResource>
+      <None Remove="Resources\TwinLandServiceEndpoints.json" />
+      <EmbeddedResource Include="Resources\TwinLandServiceEndpoints.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -52,9 +57,6 @@
 
     <ItemGroup>
       <None Update="Resouces\T_icon.png">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-      <None Update="Resources\TwinLandServiceEndpoints.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
